--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Title Clerk and Former EMT</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Monroe</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hunting and Fishing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Monroe Washington/p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be able to create things in tech and obtain future job stablity in a growing market.</p>
     </section>
 
     <footer id="footer">
