updating our details part 2

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <h1>What's your dream job?</h1>
       <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Monroe Washington/p>
+      <p>Monroe Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>To be able to create things in tech and obtain future job stablity in a growing market.</p>
+      <p>To be able to create things in tech and obtain future job stablity in a growing market</p>
     </section>
 
     <footer id="footer">
